# apex

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  APEX_INTEGRATION_COMPLETE.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  FUNCTIONAL_SPEC.md  PLUGIN_INTEGRATION_SUMMARY.md  README.md  THINKING.md  USER_FLOWS.md  apex_simple.py  pyproject.toml  specs.md  test-config.json  test_cli.py  test_complete_workflow.py  test_local_integration.py  test_mcp_integration.py  todo.md
.claude/: settings.local.json
.devcontainer/: Dockerfile  Dockerfile.agent  README.md  devcontainer.json  docker-compose.yml  setup.sh
configs/: lmdb_mcp.json
docs/: PHASE4_COMPLETION.md  claude-cli-example.md  getting-started.md  lmdb-mcp-extraction.md
docs/historical/: PLAN.md
examples/: apex_integration_example.py
llmstxt/: CLAUDE.md  claude.txt  lmdb.txt  mcp.txt
llmstxt/.claude/: settings.local.json
my-calculator/: .mcp.json  apex.json
new_version/: specs.md
patterns/: adversarial-agent-validation.md  context-as-a-service.md  mcp-tool-routing.md  multi-agent-task-distribution.md  process-isolation-shared-memory.md  session-checkpoint-recovery.md  shared-state-coordination.md  streaming-json-process-management.md  task-queue-orchestration.md
scripts/: dev.sh  setup_dev.py  test.sh
src/apex/: __init__.py  __main__.py  config.py  types.py  utils.py
src/apex/agents/: __init__.py  adversary.py  coder.py  coordinator.py  lifecycle.py  prompts.py  runner.py  supervisor.py  tools.py
src/apex/cli/: __init__.py  commands.py  integrated.py  simple.py
src/apex/core/: __init__.py  agent_runner.py  claude_integration.py  error_handling.py  lmdb_mcp.py  memory.py  memory_compat.py  process_manager.py  recovery.py  stream_parser.py  task_briefing.py  task_workflow.py
src/apex/integration/: simple_bridge.py
src/apex/mcp/: __init__.py  __main__.py  claude_lmdb_server.py  lmdb_server.py
src/apex/orchestration/: __init__.py  continuation.py  engine.py  events.py  session.py  state.py
src/apex/supervisor/: __init__.py  briefing.py  engine.py  orchestrator.py  planner.py  utility_integration.py
src/apex/tui/: __init__.py  app.py  integrated_app.py  styles.css
src/apex/utilities/: __init__.py  base.py  builtin.py  manager.py  registry.py  templates.py
src/apex/vcs/: __init__.py  auto_commit.py  git_ops.py  github_client.py
src/apex/workers/: __init__.py  claude_prompts.py
templates/: mcp.json
test_projects/somethhing/: apex.json
test_projects/test-calculator/: .mcp.json  test_integration.py
test_projects/test_projects/test-calculator-2/: .mcp.json  apex.json
tests/: __init__.py
tests/e2e/: test_claude_cli_integration.py
tests/integration/: test_memory_integration.py  test_orchestration_v2.py
tests/unit/: test_cli.py  test_config.py  test_git_ops.py
tests/unit/agents/: test_coordinator.py  (+2 more)
user-flows/: adversarial-development-flow.md  agent-management-flow.md  claude-multi-instance-flow.md  cli-operations-flow.md  configuration-management-flow.md  error-handling-flow.md  logging-debugging-flow.md  mcp-integration-flow.md  memory-management-flow.md  multi-agent-coordination-flow.md  project-creation-flow.md  project-initialization-flow.md  project-templates-flow.md  session-management-flow.md  status-monitoring-flow.md  task-workflow-flow.md  tui-navigation-flow.md  version-control-flow.md
(+22 files in other folders)
